--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
     <main>
       <section class="about">
         <div class="container">
-          <h3>"Hello! Audiophiles"</h3>
-          <h1>Sound<span>fest</span> Music Festival 2020</h1>
+          <h3 class="about-h3">"Hello! Audiophiles"</h3>
+          <h1 class="about-h1">Sound<span>fest</span> Music Festival 2020</h1>
           <div class="about-box">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -45,7 +45,7 @@
             Please contact us per email for any further questions about
             Soundfest Music Festival 2020!
           </p>
-          <a href="#">hello@soundfest.org</a>
+          <a class="about-contact-a" href="#">hello@soundfest.org</a>
         </div>
       </section>
       <section class="logo-about">
