--- a/index.html
+++ b/index.html
@@ -15,17 +15,46 @@
   </head>
   <body>
     <header>
-      <div class="secondary-nav"></div>
-      <div class="primary-nav">
-        <div class="container-header">
-          <nav>
-            <button class="primary-nav-btn btn-icon-light">
-              <i class="fas fa-bars"></i>
-            </button>
+      <div class="container-header">
+        <div class="secondary-nav">
+          <nav class="nav-sec">
+            <ul class="nav-sec-ul">
+              <li class="nav-sec-li">
+                <a href="#">facebook</a>
+              </li>
+              <li>
+                <a href="#">Twitter</a>
+              </li>
+              <li>
+                <a href="#">English</a>
+              </li>
+              <li>
+                <a href="#">My Page</a>
+              </li>
+              <li>
+                <a href="#">Logout</a>
+              </li>
+            </ul>
           </nav>
         </div>
+
+        <div class="primary-nav">
+          <nav class="nav">
+            <button class="nav-btn btn-icon-light">
+              <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-ul">
+              <li class="nav-li">
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">About </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mobile-menu"></div>
       </div>
-      <div class="mobile-menu"></div>
     </header>
     <main>
       <section class="headline">
