Add media queries for desktop-version

--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <header>
-      <div class="container-header">
-        <div class="secondary-nav">
+      <div class="secondary-nav">
+        <div class="container-header">
           <nav class="nav-sec">
             <ul class="nav-sec-ul">
               <li class="nav-sec-li">
@@ -37,24 +37,30 @@
             </ul>
           </nav>
         </div>
+      </div>
 
-        <div class="primary-nav">
+      <div class="primary-nav">
+        <div class="container-header">
+          <div class="logo-container">
+            <span class="fas fa-compact-disc logo-container-span"></span>
+            <h1 class="logo-container-h1">SOUND<span>FEST</span></h1>
+          </div>
           <nav class="nav">
             <button class="nav-btn btn-icon-light">
               <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-ul">
               <li class="nav-li">
-                <a href="#">Home</a>
+                <a class="nav-a" href="#">Home</a>
               </li>
-              <li>
-                <a href="#">About </a>
+              <li class="nav-li">
+                <a class="nav-a" href="#">About </a>
               </li>
             </ul>
           </nav>
         </div>
-        <div class="mobile-menu"></div>
       </div>
+      <div class="mobile-menu"></div>
     </header>
     <main>
       <section class="about">
