--- a/index.html
+++ b/index.html
@@ -15,46 +15,50 @@
   </head>
   <body>
     <header>
-      <div class="container-header">
-        <div class="secondary-nav">
-          <nav class="nav-sec">
-            <ul class="nav-sec-ul">
-              <li class="nav-sec-li">
-                <a href="#">facebook</a>
-              </li>
-              <li>
-                <a href="#">Twitter</a>
-              </li>
-              <li>
-                <a href="#">English</a>
-              </li>
-              <li>
-                <a href="#">My Page</a>
-              </li>
-              <li>
-                <a href="#">Logout</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+      <div class="secondary-nav">
+        <nav class="nav-sec">
+          <ul class="nav-sec-ul">
+            <li class="nav-sec-li">
+              <a class="nav-sec-a" href="#"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="nav-sec-li">
+              <a class="nav-sec-a" href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="nav-sec-li">
+              <a class="nav-sec-a" href="#">English</a>
+            </li>
+            <li class="nav-sec-li">
+              <a class="nav-sec-a" href="#">My Page</a>
+            </li>
+            <li class="nav-sec-li">
+              <a class="nav-sec-a" href="#">Logout</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
-        <div class="primary-nav">
+      <div class="primary-nav">
+        <div class="container-header">
+          <div class="logo-container">
+            <span class="fas fa-compact-disc logo-container-span"></span>
+            <h1 class="logo-container-h1">SOUND<span>FEST</span></h1>
+          </div>
           <nav class="nav">
             <button class="nav-btn btn-icon-light">
               <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-ul">
               <li class="nav-li">
-                <a href="#">Home</a>
+                <a class="nav-a" href="#">Home</a>
               </li>
-              <li>
-                <a href="#">About </a>
+              <li class="nav-li">
+                <a class="nav-a" href="#">About </a>
               </li>
             </ul>
           </nav>
         </div>
-        <div class="mobile-menu"></div>
       </div>
+      <div class="mobile-menu"></div>
     </header>
     <main>
       <section class="headline">
@@ -130,6 +134,37 @@
           <h2 class="artists-h2">Artist Line-Up</h2>
           <hr class="hr-primary" />
           <p class="artists-p">5 headliners, 15 support artists</p>
+        </div>
+      </section>
+      <section class="partners">
+        <div class="container">
+          <h2 class="partners-h2">Partners</h2>
+          <hr class="hr-primary" />
+          <ul class="partners-ul">
+            <li class="partners-li">
+              <img class="partners-li-img" src="assets/svg/bet.svg" alt="" />
+            </li>
+            <li class="partners-li">
+              <img
+                class="partners-li-img"
+                src="assets/svg/billboard.svg"
+                alt=""
+              />
+            </li>
+            <li class="partners-li">
+              <img class="partners-li-img" src="assets/svg/sony.svg" alt="" />
+            </li>
+            <li class="partners-li">
+              <img
+                class="partners-li-img"
+                src="assets/svg/applemusic.svg"
+                alt=""
+              />
+            </li>
+            <li class="partners-li">
+              <img class="partners-li-img" src="assets/svg/mtv.svg" alt="" />
+            </li>
+          </ul>
         </div>
       </section>
     </main>
