--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="logo-container-h1">SOUND<span>FEST</span></h1>
           </div>
           <nav class="nav">
-            <button class="nav-btn btn-icon-light">
+            <button id="open-menu" class="nav-btn btn-icon-light">
               <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-ul">
@@ -58,7 +58,27 @@
           </nav>
         </div>
       </div>
-      <div class="mobile-menu"></div>
+      <div id="mobile-menu" class="mobile-menu">
+        <div class="container">
+          <nav class="mobile-menu-nav">
+            <button id="close-menu" class="btn-icon-dark mobile-menu-btn">
+              &times;
+            </button>
+            <ul class="mobile-menu-ul">
+              <li class="mobile-menu-li">
+                <a class="mobile-menu-a" onclick="closeMenu()" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="mobile-menu-li">
+                <a class="mobile-menu-a" onclick="closeMenu()" href="about.html"
+                  >About
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
     <main>
       <section class="headline">
@@ -177,5 +197,6 @@
         </p>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
