Update artists section to dynamic html

--- a/about.html
+++ b/about.html
@@ -16,25 +16,29 @@
   <body>
     <header>
       <div class="secondary-nav">
-        <nav class="nav-sec">
-          <ul class="nav-sec-ul">
-            <li class="nav-sec-li">
-              <a class="nav-sec-a" href="#"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li class="nav-sec-li">
-              <a class="nav-sec-a" href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li class="nav-sec-li">
-              <a class="nav-sec-a" href="#">English</a>
-            </li>
-            <li class="nav-sec-li">
-              <a class="nav-sec-a" href="#">My Page</a>
-            </li>
-            <li class="nav-sec-li">
-              <a class="nav-sec-a" href="#">Logout</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="container-sec-header">
+          <nav class="nav-sec">
+            <ul class="nav-sec-ul">
+              <li class="nav-sec-li">
+                <a class="nav-sec-a" href="#"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="nav-sec-li">
+                <a class="nav-sec-a" href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li class="nav-sec-li">
+                <a class="nav-sec-a" href="#">English</a>
+              </li>
+              <li class="nav-sec-li">
+                <a class="nav-sec-a" href="#">My Page</a>
+              </li>
+              <li class="nav-sec-li">
+                <a class="nav-sec-a" href="#">Logout</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
 
       <div class="primary-nav">
@@ -49,10 +53,10 @@
             </button>
             <ul class="nav-ul">
               <li class="nav-li">
-                <a class="nav-a" href="#">Home</a>
+                <a class="nav-a" href="index.html">Home</a>
               </li>
               <li class="nav-li">
-                <a class="nav-a" href="#">About </a>
+                <a class="nav-a" href="about.html">About </a>
               </li>
             </ul>
           </nav>
