Update sections styling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="logo-container-h1">SOUND<span>FEST</span></h1>
           </div>
           <nav class="nav">
-            <button id="open-menu" class="nav-btn btn-icon-light">
+            <button type="button" id="open-menu" class="nav-btn btn-icon-light">
               <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-ul">
@@ -65,7 +65,11 @@
       <div id="mobile-menu" class="mobile-menu">
         <div class="container">
           <nav class="mobile-menu-nav">
-            <button id="close-menu" class="btn-icon-dark mobile-menu-btn">
+            <button
+              type="button"
+              id="close-menu"
+              class="btn-icon-dark mobile-menu-btn"
+            >
               &times;
             </button>
             <ul class="mobile-menu-ul">
@@ -194,7 +198,7 @@
       </section>
     </main>
     <footer>
-      <div class="container">
+      <div class="container-footer">
         <h1 class="footer-logo"><span class="fas fa-compact-disc"></span>SF</h1>
         <p>
           2021 Soundfest Music Festival. <br />
